# market-prediction

./: .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  DECISIONS.md  Dockerfile  Dockerfile.base  Dockerfile.research  PROJECT_CONTEXT.md  README.md  RUNNING.md  SCRIPTS.md  SESSION_LOG.md  SIGNALS.md  TODO.md  WORKFLOW.md  dev.py  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  poc_results.md  pyproject.toml
.cursor/: README.md  context-router.json  hooks.json  mcp.json
.cursor/agents/: backtest.md  evaluation.md  monitoring.md  planner.md  research.md  reviewer.md  risk.md  signal.md  strategy.md
.cursor/hooks/: README.md  _common.py  _router_core.py  _router_io.py  _router_types.py  append_session_log.py  block_dangerous_shell.py  check_dependency_research.py  format_python.py  guard_mcp_writes.py  guard_risk_files.py  no_inline_python.py  pre_commit_review.py  prompt_capture.py  prompt_context_router.py  record_decisions.py  record_thought.py  session_init.py  spec-session-init.js
.cursor/rules/: ai-workflow.mdc  architecture.mdc  backend.mdc  backtesting.mdc  coding-standards.mdc  component-first.mdc  deployment.mdc  docker.mdc  evaluation.mdc  frontend.mdc  library-research.mdc  llm-usage.mdc  neko-voice.mdc  research-workflow.mdc  risk-management.mdc  security.mdc  spec-format.mdc  spec-sessions.mdc  testing.mdc  workflow.mdc
.cursor/scripts/: spec-new.js
.cursor/spec-templates/: bugfix-template.md  design-template.md  requirements-template.md  tasks-template.md
.cursor/state/: README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  trading-base.yml
ai_evals/: EVAL_GUIDELINES.md  README.md  __init__.py
ai_evals/deepeval/: __init__.py  conftest.py  test_model_reasoning.py  test_signal_hypothesis.py  test_strategy_analysis.py
ai_evals/fixtures/: backtest_report.json  offline_responses.json  signal_universe.json
ai_evals/promptfoo/: promptfooconfig.yaml
backend/: Dockerfile  __init__.py
backend/api/: __init__.py  app.py  deps.py  main.py
backtests/: __init__.py  engine.py  manifest.py  metrics.py  run.py  smoke.py
configs/: backtest.yaml  costs.yaml  lgbm_baseline.yaml  risk.yaml  runtime.yaml
configs/strategies/: momentum_xover.yaml
data/: __init__.py  adjust.py  db.py  schema.sql  store.py  types.py
data/ingest/: __init__.py  base.py  binance.py  binance_public.py  coinbase.py  coinbase_public.py  run.py  yfinance_source.py
data/repositories/: __init__.py  backtests_repo.py  signals_repo.py  strategies_repo.py  trades_repo.py
data/seeds/: __init__.py  config_loader.py
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTING.md  DATA_MODEL.md  DESIGN.md  EVALUATION.md  INFRASTRUCTURE.md  MCP.md  MVP0_READINESS.md  REMINDERS.md  RISK_POLICY.md  SECURITY.md  STRATEGY.md  UI_REQUIREMENTS.md
docsite/: .gitignore  PAGE_DEPLOY.md  README.md  index.md  requirements.txt
docsite/hooks/: sync_sources.py
docsite/javascripts/: mermaid-init.js
docsite/stylesheets/: extra.css
execution/: __init__.py  reconciler.py  runner.py
execution/brokers/: __init__.py  base.py  binance.py  coinbase.py  paper.py  registry.py
frontend/: .dockerignore  .gitignore  Dockerfile  components.json  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  ascii-candle.ts  neko-voice.ts  utils.ts
frontend/styleguide/: registry.ts  types.ts
frontend/styles/: neko.css
learning/: __init__.py  types.py
learning/scorers/: __init__.py  base.py  standard.py
monitoring/: __init__.py  canonical_json.py  drift.py  logger.py  metrics.py
monitoring/audit/: __init__.py  __main__.py  verifier.py
pocs/: run_all_pocs.py
pocs/artifact_replay/: run_poc.py
pocs/bonus_latency_pipeline/: run_poc.py
pocs/config_mutation/: run_poc.py
pocs/deterministic_backtest/: run_poc.py
pocs/event_stream/: run_poc.py
pocs/learning_feedback/: run_poc.py
pocs/llm_isolation/: run_poc.py
pocs/paperbroker_simulation/: run_poc.py
pocs/risk_engine_bypass/: run_poc.py  run_poc_real.py
pocs/signal_validity_experiments/: run_poc.py
research/: __init__.py  cv.py  labels.py
research/features/: __init__.py  base.py  build.py  momentum.py  price.py  validation.py  volume.py
research/llm/: __init__.py  client.py  prompts.py
research/models/: __init__.py  base.py  lgbm.py  registry.py  torch_mlp.py  train.py  xgb.py
risk/: __init__.py  audit.py  engine.py  errors.py  limits.py  sizing.py  types.py
runs/: __init__.py  exceptions.py  isolation.py  orchestrator.py  recovery.py  types.py  worker.py
runs/events/: __init__.py  bus.py  factory.py  in_memory.py  outbox.py  protocols.py  redis_bus.py
specs/: README.md
specs/prompt-context-router/: design.md  requirements.md  tasks.md
specs/trading-lab-platform/: design.md  requirements.md  tasks.md
strategies/: __init__.py  base.py  composer.py
strategies/examples/: __init__.py  momentum_xover.py
tests/: test_canonical_json.py  test_features_no_lookahead.py  test_imports.py  test_risk_engine.py
tests/audit/: __init__.py  test_audit_chain.py
tests/cursor_harness/: conftest.py  test_dependency_research_hook.py  test_hook_contract.py  test_hook_scripts.py  test_hooks_json.py  test_prompt_capture.py  test_router_dedup.py  test_router_determinism.py  test_router_excerpt.py  test_router_io.py  test_router_load.py  test_router_main.py  test_router_match.py  test_router_route.py  test_routing_table.py  test_session_init_docmap.py  test_smoke_e2e.py
tests/data/: test_binance_public_ingester.py  test_coinbase_public_ingester.py  test_yfinance_ingester.py
tests/det/: __init__.py  test_backtest_determinism.py  test_det_marker_registered.py  test_run_metrics_byte_identical.py
tests/e2e/: __init__.py  test_api_app.py  test_backtest_run_visible_in_api.py  test_backtest_smoke.py  test_health_redis_optional.py  test_kill_switch_auth.py  test_mvp0_acceptance.py  (+2 more)
(+177 files in other folders)
