[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-lab"
version = "0.3.0"
description = "AI-assisted quantitative trading research platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "trading-lab" }]

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "click>=8.1",
    "tenacity>=8.2",
    "httpx>=0.27",
    "websockets>=12.0",
    "vectorbt>=0.26",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "python-binance>=1.0.19",
    "coinbase-advanced-py>=1.2",
    "ccxt>=4.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis>=5.0",
    "ollama>=0.3",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "fakeredis>=2.23",
]
ai-eval = [
    "deepeval>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "data*",
    "research*",
    "strategies*",
    "risk*",
    "backtests*",
    "execution*",
    "monitoring*",
    "backend*",
    "runs*",
    "learning*",
]
exclude = [
    "tests*",
    "ai_evals*",
    "data.raw*",
    "data.processed*",
    "backtests.results*",
    "frontend*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "data/raw",
    "data/processed",
    "backtests/results",
    "frontend",
    "node_modules",
    "pocs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"ai_evals/deepeval/*.py" = ["PLC0415", "RUF001", "PLR2004"]
"research/models/*.py" = ["N803", "N806"]
"research/models/train.py" = ["N803", "N806"]
"tests/**/*.py" = ["PLR2004"]
# Cursor-harness tests intentionally import hook modules inside test
# bodies because the conftest fixture manipulates sys.path per test.
# UP017: tests use ``timezone.utc`` for parity with the hook code,
# which must run on whatever Python is on PATH.
"tests/cursor_harness/*.py" = ["PLR2004", "PLC0415", "UP017"]
"risk/errors.py" = ["N818"]
"research/llm/client.py" = ["PLW0603"]
"monitoring/logger.py" = ["PLW0603"]
"research/features/*.py" = ["PLR2004"]
"research/cv.py" = ["PLR2004"]
"research/llm/__init__.py" = ["RUF022"]
# Hooks must run on whatever Python the user has on PATH (often <3.11),
# so they keep using ``timezone.utc`` instead of ``datetime.UTC``.
".cursor/hooks/*.py" = ["UP017"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "^pocs/",
    "^pocs$",
    "^backtests/results/",
]

[[tool.mypy.overrides]]
module = "tests.det.*"
disable_error_code = ["type-arg"]
[[tool.mypy.overrides]]
module = "tests.cursor_harness.*"
disable_error_code = ["no-untyped-def", "type-arg", "no-any-return"]

[[tool.mypy.overrides]]
module = "ai_evals.deepeval.conftest"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring external services",
    "e2e: marks end-to-end tests that exercise multiple modules",
    "security: marks tests that enforce security / isolation invariants",
    "det: marks byte-determinism and determinism contract tests",
]
